working on personal page

--- a/knights-football/pages/roster.html
+++ b/knights-football/pages/roster.html
@@ -209,18 +209,22 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a class="active" href="./roster.html">Roster</a></li>
                     <li><a href="./schedule.html">Schedule</a></li>
+                    <li><a href="./site-plan.html">Site Plan</a></li>
                 </ul>
             </nav>
 
             <div class="social">
-                <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
-                    <img src="../images/social/linkedin-logo.png" alt="instagram icon" />
+                <!-- <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
+                    <img src="./images/social/linkedin-logo.png" alt="instagram icon" />
                 </a>
                 <a href="https://twitter.com/WolfleyVern" target="_blank">
-                    <img src="../images/social/twitter-x-logo.png" alt="twitter icon" />
-                </a>
-                <a href="https://www.facebook.com/vwolfley" target="_blank">
+                    <img src="./images/social/twitter-x-logo.png" alt="twitter icon" />
+                </a> -->
+                <a href="https://www.facebook.com/triviumprep" target="_blank">
                     <img src="../images/social/facebook-logo.png" alt="fb icon" />
+                </a>
+                <a href="https://www.instagram.com/triviumprep/" target="_blank">
+                    <img src="../images/social/instagram-logo.png" alt="instagram icon" />
                 </a>
             </div>
         </footer>
