--- a/knights-football/pages/schedule.html
+++ b/knights-football/pages/schedule.html
@@ -79,12 +79,13 @@
             </section>
 
             <section class="schedule-area">
-                <h3>Trivium Prep Football Schedule</h3>
+                <h2>Trivium Prep Football 2023 Schedule</h2>
                 <div class="game">
                     <div class="game-stats">
                         <div class="game-time">
-                            <div>Fri., Aug. 25</div>
-                            <div>7:00pm</div>
+                            <div class="date">Fri., Aug. 25</div>
+                            <div class="time">7:00pm</div>
+                            <div class="location">Away</div>
                         </div>
                         <div class="opponent">
                             <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
@@ -92,7 +93,7 @@
                             <img src="../images/logos/santa-cruz-valley-dust-devil.png" alt="dust devil" />
                         </div>
                         <div>
-                            <h5 class="name">Santa Cruz Valley Union High School</h5>
+                            <h5 class="name">Santa Cruz Valley</h5>
                             <div class="mascot">Dust Devils</div>
                         </div>
                         <div>
@@ -108,8 +109,9 @@
                 <div class="game">
                     <div class="game-stats">
                         <div class="game-time">
-                            <div>Fri., Sept. 1</div>
-                            <div>7:00pm</div>
+                            <div class="date">Fri., Sept. 1</div>
+                            <div class="time">7:00pm</div>
+                            <div class="location">Away</div>
                         </div>
                         <div class="opponent">
                             <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
@@ -133,8 +135,9 @@
                 <div class="game">
                     <div class="game-stats">
                         <div class="game-time">
-                            <div>Fri., Sept. 8</div>
-                            <div>7:00pm</div>
+                            <div class="date">Fri., Sept. 8</div>
+                            <div class="time">7:00pm</div>
+                            <div class="location">Home</div>
                         </div>
                         <div class="opponent">
                             <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
@@ -152,6 +155,188 @@
                         <div class="score-box">
                             <div class="wl">L</div>
                             <div class="score">28-37</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div class="game-stats">
+                        <div class="game-time">
+                            <div class="date">Fri., Sept. 19</div>
+                            <div class="time">7:00pm</div>
+                            <div class="location">Away</div>
+                        </div>
+                        <div class="opponent">
+                            <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
+                            <div>at</div>
+                            <img src="../images/logos/tonopah-valley-the-phoenix.png" alt="spartans" />
+                        </div>
+                        <div>
+                            <h5 class="name">Tonopah Valley</h5>
+                            <div class="mascot">The Phoenix</div>
+                        </div>
+                        <div>
+                            <div>Football Stadium</div>
+                            <div>238201 W Indian School Rd, Tonopah, AZ 85354</div>
+                        </div>
+                        <div class="score-box">
+                            <div class="wl">L</div>
+                            <div class="score">28-47</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div class="game-stats">
+                        <div class="game-time">
+                            <div class="date">Fri., Sept. 22</div>
+                            <div class="time">7:00pm</div>
+                            <div class="location">Home</div>
+                        </div>
+                        <div class="opponent">
+                            <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
+                            <div>vs.</div>
+                            <img src="../images/logos/heritage-academy-laveen-heroes.png" alt="spartans" />
+                        </div>
+                        <div>
+                            <h5 class="name">Heritage Academy Laveen</h5>
+                            <div class="mascot">Heroes</div>
+                        </div>
+                        <div>
+                            <div>Football Stadium</div>
+                            <div>22001 N Bullard Ave, Goodyear, AZ 85395</div>
+                        </div>
+                        <div class="score-box">
+                            <div class="wl">L</div>
+                            <div class="score">40-50</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div class="game-stats">
+                        <div class="game-time">
+                            <div class="date">Fri., Sept. 28</div>
+                            <div class="time">7:00pm</div>
+                            <div class="location">Home</div>
+                        </div>
+                        <div class="opponent">
+                            <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
+                            <div>vs.</div>
+                            <img src="../images/logos/arizona-lutheran-coyotes.png" alt="spartans" />
+                        </div>
+                        <div>
+                            <h5 class="name">Arizona Lutheran</h5>
+                            <div class="mascot">Coyotes</div>
+                        </div>
+                        <div>
+                            <div>Football Stadium</div>
+                            <div>22001 N Bullard Ave, Goodyear, AZ 85395</div>
+                        </div>
+                        <div class="score-box">
+                            <div class="wl">L</div>
+                            <div class="score">15-67</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div class="game-stats">
+                        <div class="game-time">
+                            <div class="date">Fri., Oct. 06</div>
+                            <div class="time">7:00pm</div>
+                            <div class="location">Away</div>
+                        </div>
+                        <div class="opponent">
+                            <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
+                            <div>at</div>
+                            <img src="../images/logos/st-john-paul-ii-lions.png" alt="spartans" />
+                        </div>
+                        <div>
+                            <h5 class="name">St. John Paul II</h5>
+                            <div class="mascot">Lions</div>
+                        </div>
+                        <div>
+                            <div>Football Stadium</div>
+                            <div>9126 W Camelback, Glendale, AZ 85305</div>
+                        </div>
+                        <div class="score-box">
+                            <div class="wl">W</div>
+                            <div class="score">43-0</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div class="game-stats">
+                        <div class="game-time">
+                            <div class="date">Fri., Oct. 13</div>
+                            <div class="time">7:00pm</div>
+                            <div class="location">Home</div>
+                        </div>
+                        <div class="opponent">
+                            <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
+                            <div>vs.</div>
+                            <img src="../images/logos/parker-broncs.png" alt="spartans" />
+                        </div>
+                        <div>
+                            <h5 class="name">Parker</h5>
+                            <div class="mascot">Broncs</div>
+                        </div>
+                        <div>
+                            <div>Football Stadium</div>
+                            <div>2001 N Bullard Ave, Goodyear, AZ 85395</div>
+                        </div>
+                        <div class="score-box">
+                            <div class="wl">L</div>
+                            <div class="score">37-39</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div class="game-stats">
+                        <div class="game-time">
+                            <div class="date">Fri., Oct. 20</div>
+                            <div class="time">7:00pm</div>
+                            <div class="location">Away</div>
+                        </div>
+                        <div class="opponent">
+                            <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
+                            <div>at</div>
+                            <img src="../images/logos/san-pasqual-warriors.png" alt="spartans" />
+                        </div>
+                        <div>
+                            <h5 class="name">San Pasqual</h5>
+                            <div class="mascot">Warriors</div>
+                        </div>
+                        <div>
+                            <div>Football Stadium</div>
+                            <div>676 Baseline Rd, Winterhaven, CA 92283</div>
+                        </div>
+                        <div class="score-box">
+                            <div class="wl">W</div>
+                            <div class="score">76-12</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div class="game-stats">
+                        <div class="game-time">
+                            <div class="date">Fri., Oct. 27</div>
+                            <div class="time">7:00pm</div>
+                            <div class="location">Home</div>
+                        </div>
+                        <div class="opponent">
+                            <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
+                            <div>vs.</div>
+                            <img src="../images/logos/antelope-union-rams.png" alt="spartans" />
+                        </div>
+                        <div>
+                            <h5 class="name">Antelope Union</h5>
+                            <div class="mascot">Rams</div>
+                        </div>
+                        <div>
+                            <div>Football Stadium</div>
+                            <div>2001 N Bullard Ave, Goodyear, AZ 85395</div>
+                        </div>
+                        <div class="score-box">
+                            <div class="wl">W</div>
+                            <div class="score">45-12</div>
                         </div>
                     </div>
                 </div>
@@ -178,18 +363,22 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="./roster.html">Roster</a></li>
                     <li><a class="active" href="./schedule.html">Schedule</a></li>
+                    <li><a href="./site-plan.html">Site Plan</a></li>
                 </ul>
             </nav>
 
             <div class="social">
-                <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
-                    <img src="../images/social/linkedin-logo.png" alt="instagram icon" />
+                <!-- <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
+                    <img src="./images/social/linkedin-logo.png" alt="instagram icon" />
                 </a>
                 <a href="https://twitter.com/WolfleyVern" target="_blank">
-                    <img src="../images/social/twitter-x-logo.png" alt="twitter icon" />
-                </a>
-                <a href="https://www.facebook.com/vwolfley" target="_blank">
+                    <img src="./images/social/twitter-x-logo.png" alt="twitter icon" />
+                </a> -->
+                <a href="https://www.facebook.com/triviumprep" target="_blank">
                     <img src="../images/social/facebook-logo.png" alt="fb icon" />
+                </a>
+                <a href="https://www.instagram.com/triviumprep/" target="_blank">
+                    <img src="../images/social/instagram-logo.png" alt="instagram icon" />
                 </a>
             </div>
         </footer>
