--- a/knights-football/index.html
+++ b/knights-football/index.html
@@ -111,18 +111,22 @@
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="./pages/roster.html">Roster</a></li>
                     <li><a href="./pages/schedule.html">Schedule</a></li>
+                    <li><a href="./pages/site-plan.html">Site Plan</a></li>
                 </ul>
             </nav>
 
             <div class="social">
-                <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
+                <!-- <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
                     <img src="./images/social/linkedin-logo.png" alt="instagram icon" />
                 </a>
                 <a href="https://twitter.com/WolfleyVern" target="_blank">
                     <img src="./images/social/twitter-x-logo.png" alt="twitter icon" />
-                </a>
-                <a href="https://www.facebook.com/vwolfley" target="_blank">
+                </a> -->
+                <a href="https://www.facebook.com/triviumprep" target="_blank">
                     <img src="./images/social/facebook-logo.png" alt="fb icon" />
+                </a>
+                <a href="https://www.instagram.com/triviumprep/" target="_blank">
+                    <img src="./images/social/instagram-logo.png" alt="instagram icon" />
                 </a>
             </div>
         </footer>
