--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -5,30 +5,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Whitewater Rafting Vacations | Dry Oar Boating | Contact Us</title>
 
-        <link rel="stylesheet" href="styles/contactus-styles.css" />
+        <link rel="stylesheet" href="./styles/contactus-styles.css" />
     </head>
     <body>
         <div id="content">
             <header>
-                <a id="logo_link" href="index.html">
-                    <img class="logo" src="images/logo.png" alt="Whitewater Rafting Logo" />
+                <a id="logo_link" href="./index.html">
+                    <img class="logo" src="./images/logo.png" alt="Whitewater Rafting Logo" />
                 </a>
                 <nav>
-                    <a href="index.html">Home</a>
-                    <a href="rivers.html">Rivers</a>
-                    <a href="site-plan-rafting.html">Site Plan</a>
-                    <a href="contactus.html">Contact Us</a>
+                    <a href="./index.html">Home</a>
+                    <a href="./rivers.html">Rivers</a>
+                    <a href="./site-plan-rafting.html">Site Plan</a>
+                    <a href="./contactus.html">Contact Us</a>
                 </nav>
             </header>
             <div id="hero">
                 <div id="hero-box">
-                    <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting" />
+                    <img id="hero-img" src="./images/hero.png" alt="People enjoying white water rafting" />
                 </div>
                 <section id="hero-msg">
-                    <h1 class="home-title">Have An Adventure</h1>
+                    <h1 class="home-title">Contact Us</h1>
                     <h4>Make Memories with Dry Oar</h4>
                     <div class="button-box">
-                        <a class="book" href="contactus.html">Book Now</a>
+                        <a class="book" href="./contactus.html">Book Now</a>
                     </div>
                 </section>
             </div>
@@ -58,16 +58,16 @@
             <footer>
                 <p>Dry Oar &copy; 2023 - Vern Wolfley</p>
                 <p><a href="site-plan-rafting.html">Site Plan</a></p>
-                <p><a href="contactus.html">Contact Us</a></p>
+                <p><a href="./contactus.html">Contact Us</a></p>
                 <div class="social">
                     <a href="https://facebook.com" target="_blank">
-                        <img src="images/facebook.png" alt="fb icon" />
+                        <img src="./images/facebook.png" alt="fb icon" />
                     </a>
                     <a href="https://twitter.com" target="_blank">
-                        <img src="images/twitter.png" alt="twitter icon" />
+                        <img src="./images/twitter.png" alt="twitter icon" />
                     </a>
                     <a href="https://instagram.com" target="_blank">
-                        <img src="images/instagram.png" alt="instagram icon" />
+                        <img src="./images/instagram.png" alt="instagram icon" />
                     </a>
                 </div>
             </footer>
