--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -5,30 +5,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Whitewater Rafting Vacations | Dry Oar Boating | Rivers</title>
 
-        <link rel="stylesheet" href="styles/rivers-styles.css" />
+        <link rel="stylesheet" href="./styles/rivers-styles.css" />
     </head>
     <body>
         <div id="content">
             <header>
-                <a id="logo_link" href="index.html">
-                    <img class="logo" src="images/logo.png" alt="Whitewater Rafting Logo" />
+                <a id="logo_link" href="./index.html">
+                    <img class="logo" src="./images/logo.png" alt="Whitewater Rafting Logo" />
                 </a>
                 <nav>
-                    <a href="index.html">Home</a>
-                    <a href="rivers.html">Rivers</a>
-                    <a href="site-plan-rafting.html">Site Plan</a>
-                    <a href="contactus.html">Contact Us</a>
+                    <a href="./index.html">Home</a>
+                    <a href="./rivers.html">Rivers</a>
+                    <a href="./site-plan-rafting.html">Site Plan</a>
+                    <a href="./contactus.html">Contact Us</a>
                 </nav>
             </header>
             <div id="hero">
                 <div id="hero-box">
-                    <img id="hero-img" src="images/rafting10_1024.jpg" alt="People on the river white water rafting" />
+                    <img id="hero-img" src="./images/rafting10_1024.jpg" alt="People on the river white water rafting" />
                 </div>
                 <section id="hero-msg">
                     <h1 class="home-title">Rivers</h1>
                     <h4>This page is to give information about the rivers that the company runs.</h4>
                     <div class="button-box">
-                        <a class="book" href="contactus.html">Book Now</a>
+                        <a class="book" href="./contactus.html">Book Now</a>
                     </div>
                 </section>
             </div>
@@ -36,7 +36,7 @@
             <main class="home-grid">
                 <section class="rivers">
                     <div class="wrapper1">
-                        <div class="picture"><img class="" src="images/rafting65_600.jpg" alt="river rafting" /></div>
+                        <div class="picture"><img class="" src="./images/rafting65_600.jpg" alt="river rafting" /></div>
                         <div class="header"><h2>Main Fork of the Salmon River, Idaho</h2></div>
                         <div class="content">
                             <p>
@@ -61,7 +61,7 @@
                 </section>
                 <section class="rivers">
                     <div class="wrapper2">
-                        <div class="picture"><img class="" src="images/rafting17_600.jpg" alt="river rafting" /></div>
+                        <div class="picture"><img class="" src="./images/rafting17_600.jpg" alt="river rafting" /></div>
                         <div class="header"><h2>Desolation and Gray Canyon, Utah</h2></div>
                         <div class="content">
                             <p>
@@ -82,7 +82,7 @@
                 </section>
                 <section class="rivers">
                     <div class="wrapper1">
-                        <div class="picture"><img class="" src="images/rafting4_600.jpg" alt="river rafting" /></div>
+                        <div class="picture"><img class="" src="./images/rafting4_600.jpg" alt="river rafting" /></div>
                         <div class="header"><h2>Grand Canyon, Arizona</h2></div>
                         <div class="content">
                             <p>
@@ -106,17 +106,17 @@
             </main>
             <footer>
                 <p>Dry Oar &copy; 2023 - Vern Wolfley</p>
-                <p><a href="site-plan-rafting.html">Site Plan</a></p>
-                <p><a href="contactus.html">Contact Us</a></p>
+                <p><a href="./site-plan-rafting.html">Site Plan</a></p>
+                <p><a href="./contactus.html">Contact Us</a></p>
                 <div class="social">
                     <a href="https://facebook.com" target="_blank">
-                        <img src="images/facebook.png" alt="fb icon" />
+                        <img src="./images/facebook.png" alt="fb icon" />
                     </a>
                     <a href="https://twitter.com" target="_blank">
-                        <img src="images/twitter.png" alt="twitter icon" />
+                        <img src="./images/twitter.png" alt="twitter icon" />
                     </a>
                     <a href="https://instagram.com" target="_blank">
-                        <img src="images/instagram.png" alt="instagram icon" />
+                        <img src="./images/instagram.png" alt="instagram icon" />
                     </a>
                 </div>
             </footer>
