--- a/knights-football/index.html
+++ b/knights-football/index.html
@@ -93,9 +93,9 @@
             </section>
             <div class="photo-area">
                 <div class="content-box">
-                    <img class="" src="./images/photos/TRIV-001.jpg" alt="" />
-                    <img class="" src="./images/photos/TRIV-083.jpg" alt="" />
-                    <img class="" src="./images/photos/TRIV-108.jpg" alt="" />
+                    <img class="" src="./images/photos/rsz-triv-001.jpg" alt="" />
+                    <img class="" src="./images/photos/rsz-triv-083.jpg" alt="" />
+                    <img class="" src="./images/photos/rsz-triv-108.jpg" alt="" />
                 </div>
             </div>
         </main>
