--- a/knights-football/pages/schedule.html
+++ b/knights-football/pages/schedule.html
@@ -345,9 +345,9 @@
 
             <div class="photo-area">
                 <div class="content-box">
-                    <img class="" src="../images/photos/TRIV-001.jpg" alt="" />
-                    <img class="" src="../images/photos/TRIV-083.jpg" alt="" />
-                    <img class="" src="../images/photos/TRIV-108.jpg" alt="" />
+                    <img class="" src="../images/photos/rsz-triv-210.jpg" alt="" />
+                    <img class="" src="../images/photos/triv-fb.JPEG" alt="" />
+                    <img class="" src="../images/photos/rsz-triv-241.jpg" alt="" />
                 </div>
             </div>
         </main>
