--- a/knights-football/pages/roster.html
+++ b/knights-football/pages/roster.html
@@ -76,7 +76,7 @@
                     </ul>
                 </div>
                 <div class="player-list">
-                    <h3>Your Crimson Knights</h3>
+                    <h2>Your Crimson Knights</h2>
                     <div class="player">
                         <div class="number">2</div>
                         <div class="player-stats">
@@ -104,96 +104,119 @@
                             <div class="weight-head">Weight</div>
                             <div class="weight">185 lbs</div>
                         </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">5</div>
+                        <div class="player-stats">
+                            <div class="name">Koston Belfield</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">WR, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">11</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">6'0"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">160 lbs</div>
                         </div>
-                        <div class="player">
-                            <div class="number">5</div>
-                            <div class="player-stats">
-                                <div class="name">Koston Belfield</div>
-                                <div class="position-head">Position</div>
-                                <div class="position">WR, DB</div>
-                                <div class="year-head">Year</div>
-                                <div class="year">11</div>
-                                <div class="height-head">Height</div>
-                                <div class="height">6'0"</div>
-                                <div class="weight-head">Weight</div>
-                                <div class="weight">160 lbs</div>
-                            </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">7</div>
+                        <div class="player-stats">
+                            <div class="name">Noah Messieha</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">WR, K, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">11</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'10"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">140 lbs</div>
                         </div>
-                        <div class="player">
-                            <div class="number">7</div>
-                            <div class="player-stats">
-                                <div class="name">Noah Messieha</div>
-                                <div class="position-head">Position</div>
-                                <div class="position">WR, K, DB</div>
-                                <div class="year-head">Year</div>
-                                <div class="year">11</div>
-                                <div class="height-head">Height</div>
-                                <div class="height">5'10"</div>
-                                <div class="weight-head">Weight</div>
-                                <div class="weight">140 lbs</div>
-                            </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">8</div>
+                        <div class="player-stats">
+                            <div class="name">Zachary Eckart</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">TE, LB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">11</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'11"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">176 lbs</div>
                         </div>
-                        <div class="player">
-                            <div class="number">8</div>
-                            <div class="player-stats">
-                                <div class="name">Zachary Eckart</div>
-                                <div class="position-head">Position</div>
-                                <div class="position">TE, LB</div>
-                                <div class="year-head">Year</div>
-                                <div class="year">11</div>
-                                <div class="height-head">Height</div>
-                                <div class="height">5'11"</div>
-                                <div class="weight-head">Weight</div>
-                                <div class="weight">176 lbs</div>
-                            </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">10</div>
+                        <div class="player-stats">
+                            <div class="name">Kenyon Bonton</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">WR, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">9</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'7"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">110 lbs</div>
                         </div>
-                        <div class="player">
-                            <div class="number">10</div>
-                            <div class="player-stats">
-                                <div class="name">Kenyon Bonton</div>
-                                <div class="position-head">Position</div>
-                                <div class="position">WR, DB</div>
-                                <div class="year-head">Year</div>
-                                <div class="year">9</div>
-                                <div class="height-head">Height</div>
-                                <div class="height">5'7"</div>
-                                <div class="weight-head">Weight</div>
-                                <div class="weight">110 lbs</div>
-                            </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">11</div>
+                        <div class="player-stats">
+                            <div class="name">Cruz Ramirez</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">WR, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">10</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'7"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">160 lbs</div>
                         </div>
-                        <div class="player">
-                            <div class="number">11</div>
-                            <div class="player-stats">
-                                <div class="name">Cruz Ramirez</div>
-                                <div class="position-head">Position</div>
-                                <div class="position">WR, DB</div>
-                                <div class="year-head">Year</div>
-                                <div class="year">10</div>
-                                <div class="height-head">Height</div>
-                                <div class="height">5'7"</div>
-                                <div class="weight-head">Weight</div>
-                                <div class="weight">160 lbs</div>
-                            </div>
-                        </div>
-
-
-
-
-
-                    
+                    </div>
                 </div>
             </section>
 
             <section class="coaching-area">
-                <div class="coach-list"></div>
-                <div class="pic-area"></div>
+                <h2>Your Crimson Knights Staff</h2>
+                <div class="coach-list">
+                    <div class="coach">
+                        <div class="name">Stephen Hemming</div>
+                        <div class="title">Head Coach</div>
+                    </div>
+                    <div class="coach">
+                        <div class="name">Matt Pezzelle</div>
+                        <div class="title">Assistant Coach</div>
+                    </div>
+                    <div class="coach">
+                        <div class="name">Aaron Hamilton</div>
+                        <div class="title">Assistant Coach</div>
+                    </div>
+                    <div class="coach">
+                        <div class="name">Austin Christy</div>
+                        <div class="title">Assistant Coach</div>
+                    </div>
+                    <div class="coach">
+                        <div class="name">BJ Lee</div>
+                        <div class="title">Assistant Coach</div>
+                    </div>
+                    <div class="coach">
+                        <div class="name">Sean Collins</div>
+                        <div class="title">Assistant Coach</div>
+                    </div>
+                </div>
+
+                <div class="pic-area">
+                    <img src="../images/roster/hs_football_2023_rsz.jpeg" alt="team photo" />
+                </div>
             </section>
 
             <div class="photo-area">
                 <div class="content-box">
-                    <img class="" src="../images/photos/TRIV-001.jpg" alt="" />
-                    <img class="" src="../images/photos/TRIV-083.jpg" alt="" />
-                    <img class="" src="../images/photos/TRIV-108.jpg" alt="" />
+                    <img class="" src="../images/photos/rsz-triv-126.jpg" alt="" />
+                    <img class="" src="../images/photos/rsz-triv-170.jpg" alt="" />
+                    <img class="" src="../images/photos/rsz-triv-184.jpg" alt="" />
                 </div>
             </div>
         </main>
