--- a/knights-football/pages/roster.html
+++ b/knights-football/pages/roster.html
@@ -39,44 +39,46 @@
             </section>
 
             <section class="roster-area">
-                <div class="definitions">
-                    <h3>Definitions of Player Positions</h3>
-                    <h4>Offensive Positions</h4>
-                    <ul>
-                        <li>QB: Quarterback</li>
-                        <li>RB: Running Back</li>
-                        <li>TE: Tight End</li>
-                        <li>WR: Wide Receiver</li>
-                        <li>HB: Halfback</li>
-                        <li>FB: Fullback</li>
-                        <li>OL: Offensive Line</li>
-                        <li>C: Center</li>
-                        <li>OG: Offensive Guard</li>
-                        <li>OT: Offensive Tackle</li>
-                    </ul>
-                    <h4>Defensive Positions</h4>
-                    <ul>
-                        <li>DL: Defensive Line</li>
-                        <li>DT: Defensive Tackle</li>
-                        <li>DE: Defensive End</li>
-                        <li>MLB: Middle Linebacker</li>
-                        <li>OLB: Outside Linebacker</li>
-                        <li>CB: Cornerback</li>
-                        <li>S: Safety</li>
-                    </ul>
-                    <h4>Special Teams</h4>
-                    <ul>
-                        <li>K: Kicker</li>
-                        <li>P: Punter</li>
-                        <li>H: Holder</li>
-                        <li>LS: Long Snapper</li>
-                        <li>PR: Punt Returner</li>
-                        <li>KR: Kick Returner</li>
-                        <li>ATH: Athlete</li>
-                    </ul>
+                <h2>Your Crimson Knights</h2>
+                <div class="def-area">
+                    <div class="definitions">
+                        <h4>Definitions of Player Positions</h4>
+                        <h5>Offensive Positions</h5>
+                        <ul>
+                            <li>QB: Quarterback</li>
+                            <li>RB: Running Back</li>
+                            <li>TE: Tight End</li>
+                            <li>WR: Wide Receiver</li>
+                            <li>HB: Halfback</li>
+                            <li>FB: Fullback</li>
+                            <li>OL: Offensive Line</li>
+                            <li>C: Center</li>
+                            <li>OG: Offensive Guard</li>
+                            <li>OT: Offensive Tackle</li>
+                        </ul>
+                        <h5>Defensive Positions</h5>
+                        <ul>
+                            <li>DL: Defensive Line</li>
+                            <li>DT: Defensive Tackle</li>
+                            <li>DE: Defensive End</li>
+                            <li>MLB: Middle Linebacker</li>
+                            <li>OLB: Outside Linebacker</li>
+                            <li>CB: Cornerback</li>
+                            <li>S: Safety</li>
+                        </ul>
+                        <h5>Special Teams</h5>
+                        <ul>
+                            <li>K: Kicker</li>
+                            <li>P: Punter</li>
+                            <li>H: Holder</li>
+                            <li>LS: Long Snapper</li>
+                            <li>PR: Punt Returner</li>
+                            <li>KR: Kick Returner</li>
+                            <li>ATH: Athlete</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="player-list">
-                    <h2>Your Crimson Knights</h2>
                     <div class="player">
                         <div class="number">2</div>
                         <div class="player-stats">
@@ -171,6 +173,174 @@
                             <div class="year">10</div>
                             <div class="height-head">Height</div>
                             <div class="height">5'7"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">160 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">12</div>
+                        <div class="player-stats">
+                            <div class="name">William Lecky</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">WR, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">10</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'9"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">160 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">18</div>
+                        <div class="player-stats">
+                            <div class="name">Ben Wolfley</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">WR, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">9</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'10"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">165 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">20</div>
+                        <div class="player-stats">
+                            <div class="name">Thomas Wodrich</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">RB, LB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">9</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'10"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">150 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">22</div>
+                        <div class="player-stats">
+                            <div class="name">Felix Hall</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">WR, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">11</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'9"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">160 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">23</div>
+                        <div class="player-stats">
+                            <div class="name">Chris Alcala</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">RB, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">10</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'7"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">150 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">24</div>
+                        <div class="player-stats">
+                            <div class="name">Jacob Butterfield</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">WR, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">10</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'5"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">135 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">31</div>
+                        <div class="player-stats">
+                            <div class="name">Xander Lecky</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">TE, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">9</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'9"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">145 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">32</div>
+                        <div class="player-stats">
+                            <div class="name">William Kelly</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">RB, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">9</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'7"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">145 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">33</div>
+                        <div class="player-stats">
+                            <div class="name">Gus Scott</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">OL, DL</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">11</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">6'0"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">215 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">44</div>
+                        <div class="player-stats">
+                            <div class="name">Ezra Hall</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">WR, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">9</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'7"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">140 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">50</div>
+                        <div class="player-stats">
+                            <div class="name">Jona Garcia</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">OL, DL</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">9</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'6"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">156 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">51</div>
+                        <div class="player-stats">
+                            <div class="name">Billy Phillips III</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">OL, DL</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">9</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'10"</div>
                             <div class="weight-head">Weight</div>
                             <div class="weight">160 lbs</div>
                         </div>
