--- a/knights-football/index.html
+++ b/knights-football/index.html
@@ -51,6 +51,16 @@
                     </p>
                 </div>
             </section>
+            <section class="countdown">
+                <div class="countdown-content">
+                    <h1>Countdown to the Next Game</h1>
+                    <div class="countdown-box">
+                        <img class="logo" src="./images/triviumcrimsonknight_knight.png" alt="knight Logo" />
+                        <p id="demo"></p>
+                    </div>
+                    <div class="count-day">August 23, 2024 @ 7pm</div>
+                </div>
+            </section>
             <section class="philosophy">
                 <div class="box1">
                     <h2>Great Hearts Athletic Philosophy</h2>
@@ -71,12 +81,12 @@
                     <div class="border">
                         <blockquote>
                             <p>
-                                Football is like life. It requires perseverance, self-denial, hard work, sacrifice, dedication, and respect for authority.
+                                Football is like life. It requires perseverance, self-denial, hard work, sacrifice, dedication, and respect for
+                                authority.
                             </p>
                             <cite>Vince Lombardi</cite>
                         </blockquote>
                     </div>
-                    
                 </div>
             </section>
             <section class="sportsmanship">
@@ -130,5 +140,34 @@
                 </a>
             </div>
         </footer>
+
+        <script>
+            // Set the date we're counting down to
+            var countDownDate = new Date("Aug 23, 2024 19:00:00").getTime();
+
+            // Update the count down every 1 second
+            var x = setInterval(function () {
+                // Get today's date and time
+                var now = new Date().getTime();
+
+                // Find the distance between now and the count down date
+                var distance = countDownDate - now;
+
+                // Time calculations for days, hours, minutes and seconds
+                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+                // Output the result in an element with id="demo"
+                document.getElementById("demo").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+
+                // If the count down is over, write some text
+                if (distance < 0) {
+                    clearInterval(x);
+                    document.getElementById("demo").innerHTML = "EXPIRED";
+                }
+            }, 1000);
+        </script>
     </body>
 </html>
