--- a/knights-football/index.html
+++ b/knights-football/index.html
@@ -12,13 +12,13 @@
     </head>
     <body>
         <header>
-            <nav>
+            <div class="title">
                 <a class="logo_link" href="index.html">
                     <img class="logo" src="./images/kneeling_knight_crop.png" alt="knight Logo" />
                 </a>
-                <div class="title">
-                    <h4>Trivium Prep Football</h4>
-                </div>
+                <h4>Trivium Prep Football</h4>
+            </div>
+            <nav>
                 <ul class="nav-links">
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="./pages/roster.html">Roster</a></li>
@@ -111,10 +111,12 @@
         </main>
 
         <footer>
-            <a class="logo_link" href="index.html">
-                <img class="logo" src="./images/kneeling_knight_crop.png" alt="knight Logo" />
-            </a>
-            <div>Copyright &copy; 2023 - Vern Wolfley</div>
+            <div class="footer-title">
+                <a class="logo_link" href="index.html">
+                    <img class="logo" src="./images/kneeling_knight_crop.png" alt="knight Logo" />
+                </a>
+                <div class="copyright">Copyright &copy; 2023 - Vern Wolfley</div>
+            </div>
 
             <nav>
                 <ul class="nav-links">
