--- a/knights-football/pages/roster.html
+++ b/knights-football/pages/roster.html
@@ -12,16 +12,16 @@
     </head>
     <body>
         <header>
-            <nav>
+            <div class="title">
                 <a class="logo_link" href="../index.html">
-                    <img class="logo" src="../images/kneeling_knight_crop.png" alt="knight Logo" width="125px" />
+                    <img class="logo" src="../images/kneeling_knight_crop.png" alt="knight Logo" />
                 </a>
-                <div class="title">
-                    <h4>Trivium Prep Football</h4>
-                </div>
+                <h4>Trivium Prep Football</h4>
+            </div>
+            <nav>
                 <ul class="nav-links">
                     <li><a href="../index.html">Home</a></li>
-                    <li><a class="active" href="./roster.html">Roster</a></li>
+                    <li><a class="active"href="./roster.html">Roster</a></li>
                     <li><a href="./schedule.html">Schedule</a></li>
                 </ul>
             </nav>
@@ -392,10 +392,12 @@
         </main>
 
         <footer>
-            <a class="logo_link" href="../index.html">
-                <img class="logo" src="../images/kneeling_knight_crop.png" alt="knight Logo" />
-            </a>
-            <div>Copyright &copy; 2023 - Vern Wolfley</div>
+            <div class="footer-title">
+                <a class="logo_link" href="../index.html">
+                    <img class="logo" src="../images/kneeling_knight_crop.png" alt="knight Logo" />
+                </a>
+                <div class="copyright">Copyright &copy; 2023 - Vern Wolfley</div>
+            </div>
 
             <nav>
                 <ul class="nav-links">
